<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gunwoo.karaoke.singsangsung.viewmodel.SearchSettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                app:popupTheme="@style/AppTheme"
                tools:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="1dp"
                    android:tint="@color/colorSoftGrey"
                    android:src="@drawable/ic_info" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorSoftGrey"
                    android:fontFamily="@font/nanum_square_regular"
                    android:text="@string/text_setting_priority" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nanum_square_round"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/text_channel" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nanum_square_round"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/text_max_results" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nanum_square_round"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/text_remove" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:adapter="@{viewModel.channelListAdapter}"
                app:dragListener="@{(from, to) -> viewModel.onDragged(from, to)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                tools:itemCount="6"
                tools:listitem="@layout/item_channel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorLightGrey"
                android:orientation="horizontal"
                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                android:onClick="@{() -> viewModel.onClickAddChannel()}">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_circle"
                    android:tint="@color/colorSoftGrey"
                    app:civ_border_color="@android:color/transparent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanum_square_round"
                    android:text="@string/text_add_channel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>